[project]
name = "weighted-knn-shapley-by-deplication-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
